# BOT_WB

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  adadas.py  dsada.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/bot_wb/: __init__.py  logger.py  logging.py  main.py  settings.py  webapp_server.py
src/bot_wb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/bot_wb/handlers/: __init__.py  _render.py  auth.py  profile.py  start.py
src/bot_wb/middlewares/: __init__.py  context.py  error.py
src/bot_wb/services/: __init__.py  auth_service.py  browser_login.py  wb_browser.py  wb_client.py  wb_http_client.py
src/bot_wb/storage/: __init__.py  db.py  repo.py  session.py
src/bot_wb/ui/: __init__.py  keyboards.py  texts.py
src/bot_wb/wb/: __init__.py  auth.py  client.py  errors.py  profile.py  shipments.py  types.py  utils.py
templates/: profile_app.html
tests/: conftest.py  test_auth_service.py  test_handlers_profile.py  test_handlers_profile_aiogram_utils.py  test_http_client.py  test_keyboards.py  test_session_storage.py
